--- a/2nd year report/mybib.bib
+++ b/2nd year report/mybib.bib
@@ -481,3 +481,24 @@
   year={2012},
   publisher={Elsevier}
 }
+
+@manual{coinor,
+      title  = "Computational Infrastructure for Operations Research (COIN-OR)",
+      url    = "https://www.coin-or.org/",
+      year   = "2004",
+     note = "Accessed October 15, 2020"
+    }
+
+@manual{ortools,
+      title  = "OR-Tools",
+      url    = "https://developers.google.com/optimization",
+      year   = "2015",
+     note = "Accessed October 15, 2020"
+    }
+
+@manual{ficoxp,
+      title  = "FICO Xpress Optimization",
+      url    = "https://www.fico.com/en/products/fico-xpress-optimization",
+      year   = "1983",
+     note = "Accessed October 15, 2020"
+    }
