--- a/2nd year report/Year2report.tex
+++ b/2nd year report/Year2report.tex
@@ -531,26 +531,33 @@ The model could potentially be expanded by adding a more sophisticated cost func
 \pagebreak
 
 \section{Implementation}\label{s:impl}
-In addition the developing the models discussed in the previous section, I also implemented the models and solved them for small test cases. This part of the process was highly valuable in my development as a modeler, and many of the design decisions that lead to the creation of the previously shown models were informed by insights and results gained from the implementation. In this section I will illustrate my progress discuss the general structure of my code. 
+In addition to the developing the models discussed in the previous section, I also implemented the models and solved them for small test cases. This part of the process was highly valuable in my development as a modeler, and many of the design decisions that lead to the creation of the previously shown models were informed by insights and results gained from the implementation. In this section I will describe the chronological progress made through implementation and highlight the obstacles and what I learned in dealing with them. 
 
-\subsection{Progress}
-Before this project I had only used simple graphical interfaces for solvers, during introductory courses to optimization, so I had very little experience working with solvers, and no experience doing so through programming. I decided for this project to work in C++ as I am familiar with the language (more than Java or Python for example) and most solvers I looked at can be called through a C++ library. By the time I started this phase of the project I was forced to work from home because of the Covid-19 pandemic, which means I could not use the university computers and had to install any solver I wished to use on my own personal computer. This caused some startup problems getting a good solver to work properly. I started off using free solvers, Google's OR-tools at first \cite{ortools}. I had issues getting this to work on my PC and I kept having issues with the library, so I switched to another free solver, COIN-OR \cite{coinor}. This also had some issues, and after I asked my supervisors for advice they helped me get a license for the FICO Xpress optimization suite \cite{ficoxp}. This was the first commercially available LP and MIP solver, and is still a widely used solver. This solver was much easier to get to work than the ones I previously used, and I could finally get to actually solving models. 
+\subsection{Getting an initial implementation}
+Before this project I had only used simple graphical interfaces for solvers to solve simple exercises from introductory courses to optimization. This means I had very little experience really working with solvers, and no experience doing so through programming. I decided for this project to work in C++ as I am familiar with the language (more than Java or Python for example) and most solvers I looked at can be called through a C++ library. By the time I started this phase of the project I was forced to work from home because of the Covid-19 pandemic, which means I could not use the university computers and had to install any solver I wished to use on my own personal computer. This caused some startup problems getting a good solver to work properly. I started off using free solvers, Google's OR-tools at first \cite{ortools}. I had issues getting this to work on my PC and I kept having issues with the library, so I switched to another free solver, COIN-OR \cite{coinor}. This also had some issues, and after I asked my supervisors for advice they helped me get a license for the FICO Xpress optimization suite \cite{ficoxp}. This was the first commercially available LP and MIP solver, and is still a widely used solver. This solver was much easier to get to work than the ones I previously used, and I could finally get to actually solving models. 
 
-I started with the Xpress tutorial and from there slowly changed the tutorial model to the installation phase model I had at the time, a precursor to the model shown in \Cref{sss:install}. I had made a very simplistic test case for this, with only 3 turbines, 2 tasks per turbine, and 2 vessels to complete them, with artificial durations for each task to simply test whether the model gave the results I expected. Whenever this was not the case, it gave me insights in the model; for example at first I did not have a limit on the amount of vessels that could be rented in a period, and regardless of how many turbines there were every turbine would be installed in the first period, as the amount of vessels available was unlimited and there was a benefit to installing all turbines as fast as possible. 
+I started with the Xpress tutorial and from there slowly changed the tutorial model to the installation phase model I had at the time, a precursor to the model shown in \Cref{sss:install}. I had made a very simplistic test case for this, with only 3 turbines, 2 tasks per turbine, and 2 vessels to complete them, with artificial durations for each task to simply test whether the model gave the results I expected. Whenever this was not the case, it gave me insights in the model; for example at first I did not have a limit on the amount of vessels that could be rented in a period, and regardless of how many turbines there were every turbine would be installed in the first period, as the amount of vessels available was unlimited and there was a benefit to installing all turbines as fast as possible. This lead to unrealistic amounts of vessels rented in the first period, and none after; hence I introduced the limit seen in equation (7). 
 
-\bigskip
+\subsection{Increasing efficiency}
+I kept on expanding the implementation of the model while adapting my models based on new findings or insights, and eventually got to the combined model from \Cref{sss:comb}. While the implementation seemed to work with very small test cases, I was unable to find solutions for any artificial test cases spanning several years within 8+ hours of running. As an inexperienced modeler it was hard to determine where the issue lay, and I saw four possible areas that could limit the speed:
 
-I kept on expanding the implementation of the model while adapting my models based on new findings or insights, and eventually got to the combined model from \Cref{sss:comb}. While the implementation seemed to work with very small test cases, I was unable to find solutions for any artificial test cases spanning several years within 8+ hours of running. As an inexperienced modeler it was hard to determine where the issue lay; the model itself could be very inefficient, or the implementation could be the problem, or my PC might simply not be powerful enough, or the size of the testcase might simply be unrealistic even for an efficient model on a state-of-the-art computer. Based on some discussion with my supervisors I decided to mostly focus on improving the model and implementation, and if I got to a point where I could not find new ways to do that we could look into running this on better computers available from the university. Looking for such improvements would be the right first step even if the main problem was my computer, and it is a valuable skill to have experience with. 
+\begin{itemize}
+\item The model itself could be inefficient
+\item The implementation could be the problem
+\item My PC might simply not be powerful enough (it has a 3.20 GHz Intel i5-4570 CPU)
+\item The size of the testcase might simply be unrealistic even for an properly implemented efficient model on a state-of-the-art computer
+\end{itemize}
 
-One of the most effective ways to reduce the computation times I used was through solving the problem in multiple stages. Instead of giving the solver the full model at once, I would leave out certain constraints at first (not adding them at all, or adding them as cuts), solve the resulting problem, and then add back the full constraint set and solve that problem. The total time of these two solves would often be significant less than that of the single big solve I used before, likely because the first solve gave the solver a lot of information about the included constraints; information that helped in the second solve. The big question after finding this was selecting which constraints to include in the first solve, and which to leave out. Rather than determining that analytically I experimented with different combinations on small test cases. To facilitate this I build a Mode class in my program that could be used to cycle through modes, solving the same problem for every combination of constraint types excluded from the first solve, and recording the time each solve took. Instead of considering constraints individually I grouped them based on the equation they resulted from; the model in \Cref{sss:comb} can have any number of constraints based on the input, but it will always have 9 constraint types, each represented by one of the equations (22) through (30). Based on the results from small cases I identified which combinations worked best, and those are the settings I would use to solve larger testcases. Using this method, I managed to cut down computation times for medium testcases in half, and made larger cases that were previously unsolvable in 8 hours be solved in under 4 hours. 
+Based on some discussion with my supervisors I decided to mostly focus on improving the model and implementation, and if I got to a point where I could not find new ways to do that we could look into running this on better computers available from the university. Looking for such improvements would be the right first step even if the main problem was my computer, and it is a valuable skill to have experience with. 
 
-However through this I still was not able to run the model on testcases anywhere near the size of the full life cycle. However, considering the size of the model and the problem, and my consumer computer I was using (with a 3.20 GHz Intel i5-4570 CPU), hoping to solve this was rather ambitious. This is why I chose to scale the problem down and move on to stochastic models (as discussed in the previous section) rather than get stuck trying to solve a problem that would likely never be solvable using my computer. 
+One of the most effective ways to reduce the computation times I used was through solving the problem in multiple stages. Instead of giving the solver the full model at once, I would leave out certain constraints at first (not adding them at all, or adding them as cuts), solve the resulting problem, and then add back the full constraint set and solve that problem. The total time of these two solves would often be significantly less than that of the single big solve I used before, likely because the first solve gave the solver a lot of information about the included constraints; information that helped in the second solve. The big question after finding this was selecting which constraints to include in the first solve, and which to leave out. Rather than determining this analytically I experimented with different combinations on small test cases. To facilitate this I build a Mode class in my program that could be used to cycle through modes, solving the same problem for every combination of constraint types excluded from the first solve, and recording the time each solve took. Instead of considering constraints individually I grouped them based on the equation they resulted from; the model in \Cref{sss:comb} can have any number of constraints based on the input, but it will always have 9 constraint types, each represented by one of the equations (22) through (30). Based on the results from small cases I identified which combinations worked best, and those are the settings I would use to solve larger testcases. Using this method, I managed to cut down average computation times for medium testcases roughly in half, and made larger cases for which I could previously not find a solution in 8 hours solvable to optimality in under 4 hours. 
 
-\bigskip
+While that sounds promising, I was still not able to find solutions for the model on testcases anywhere near the size of the full life cycle. However, considering the size of the model and the problem, and my consumer computer I was using, hoping to solve this was rather ambitious. This is why I chose to scale the problem down and move on to stochastic models (as discussed in the previous section) rather than get stuck trying to solve a problem that would likely never be solvable using my computer. 
 
-From here the progress followed a similar path as before, with the implementation informing my modeling decisions and vice versa. The final large programming change happened when I moved on to the multilevel model described in \Cref{ss:multi}. Previously every model had followed the same structure, but this model broke that pattern, which required me to do a lot of extra programming for the model to be properly implemented. At the time of writing I have completed that for the two separate levels within this model, but I have not yet made it so the levels are called in succession; this is still something I wish to do in the near future. 
+\subsection{A different approach}
+It was while implementing the stochastic model from \Cref{ss:stoc} that I decided to try a different approach; the multilevel model shown in \Cref{ss:multi}. The main reason for this was that I had trouble getting the stochastic elements to work as desired, and I realized a large set of scenarios would be needed to represent 20+ years worth of stochastic events. This did not fully become clear to me until implementing the model, and at the same time I realized how the model would grow significantly with the amount of scenarios. The reason I was focusing on the maintenance phase for this model was to reduce the scale compared to the life-cycle model, but through this growth based on the number of scenarios this problem would not be scaled down. That's when I realized a completely new approach might be needed, and I moved on to the multilevel model. 
 
-%TODO: Talk about code in appendix, reread section and see what else should be said here, fix section opening (either write the section as is foreshadowed in the opening, or change the opening and remove/change subsection)
+This is when the final large programming change happened. Previously every model had followed the same structure, but this model broke that pattern, which required me to do a lot of extra programming for the model to be properly implemented. At the time of writing I have completed that for the two separate levels within this model, but I have not yet made it so the levels are called in succession; this is still something I wish to do in the near future. 
 
 \pagebreak
 
