Added comment about appendix

--- a/2nd year report/Year2report.tex
+++ b/2nd year report/Year2report.tex
@@ -531,7 +531,7 @@ The model could potentially be expanded by adding a more sophisticated cost func
 \pagebreak
 
 \section{Implementation}\label{s:impl}
-In addition to the developing the models discussed in the previous section, I also implemented the models and solved them for small test cases. This part of the process was highly valuable in my development as a modeler, and many of the design decisions that lead to the creation of the previously shown models were informed by insights and results gained from the implementation. In this section I will describe the chronological progress made through implementation and highlight the obstacles and what I learned in dealing with them. 
+In addition to the developing the models discussed in the previous section, I also implemented the models and solved them for small test cases. This part of the process was highly valuable in my development as a modeler, and many of the design decisions that lead to the creation of the previously shown models were informed by insights and results gained from the implementation. In this section I will describe the chronological progress made through implementation and highlight the obstacles and what I learned in dealing with them. In addition to this section, my full current code is available as an appendix.  %TODO: Add appendix. How am I going to do this when the code went through so many iterations? If impossible remove this last line, or instead only add the current code and say it's just the multilevel bit. 
 
 \subsection{Getting an initial implementation}
 Before this project I had only used simple graphical interfaces for solvers to solve simple exercises from introductory courses to optimization. This means I had very little experience really working with solvers, and no experience doing so through programming. I decided for this project to work in C++ as I am familiar with the language (more than Java or Python for example) and most solvers I looked at can be called through a C++ library. By the time I started this phase of the project I was forced to work from home because of the Covid-19 pandemic, which means I could not use the university computers and had to install any solver I wished to use on my own personal computer. This caused some startup problems getting a good solver to work properly. I started off using free solvers, Google's OR-tools at first \cite{ortools}. I had issues getting this to work on my PC and I kept having issues with the library, so I switched to another free solver, COIN-OR \cite{coinor}. This also had some issues, and after I asked my supervisors for advice they helped me get a license for the FICO Xpress optimization suite \cite{ficoxp}. This was the first commercially available LP and MIP solver, and is still a widely used solver. This solver was much easier to get to work than the ones I previously used, and I could finally get to actually solving models. 
