Wrote section 6, added paper

--- a/2nd year report/Year2report.tex
+++ b/2nd year report/Year2report.tex
@@ -92,7 +92,7 @@ For the past two years, I have been researching logistics related to offshore wi
 
 The complexity with these logistics comes from various factors, the first being the severe impact that weather conditions can have on when operational tasks can be completed. These projects take place on open sea, where weather can often be rougher than on land. In addition, the high-tech vessels are performing operations on large industrial constructions, hence there is a limited range of allowed wind speeds and wave heights. Another factor which can further limit possible schedules is the inflexibility involved in vessel chartering (renting), since vessels of the required caliber cannot be chartered on short notice, making adaptive in-the-moment scheduling is impossible. This means we will have to make decisions significantly in advance, and run the risk of chartering vessels in periods where they might not be able to complete their tasks due to the weather conditions. 
 
-This report will detail the research progress I have made since the completion of my first yearly review, which (due to scheduling issues and delays) was only completed in January 2020. Further on in this section, I will recap the specific parts of this problem that I am looking at (\Cref{ss:prob}), and which research questions I initially posed (\Cref{ss:quest}). Then \Cref{s:know} through  \Cref{s:addit} will talk about the work I have been doing since the last review. Respectively, these sections are about the knowledge gaps I closed, the models I have developed, how I have implemented them, and all additional activities I have taken part in. Finally, \Cref{s:next} will discuss the next steps for this project. 
+This report will detail the research progress I have made since the completion of my first yearly review, which (due to scheduling issues and delays) was only completed in January 2020. Further on in this section, I will recap the specific parts of this problem that I am looking at (\Cref{ss:prob}), and which research questions I initially posed (\Cref{ss:quest}). Then \Cref{s:know} through  \Cref{s:addit} will talk about the work I have been doing since the last review. Respectively, these sections are about the knowledge gaps I closed, the models I have developed, how I have implemented them, and all additional activities I have taken part in. Finally, \Cref{s:concl} will discuss the next steps for this project. 
 
 \subsection{Problem description} \label{ss:prob}
 This research looks at offshore windfarms (OWFs) and the scheduling decisions made over the entire life-cycle of such an OWF. I will focus on the type of windfarms currently being build in the North Sea \cite{ruk2017,barlow2018mixed}. These windfarms generally consist of up to 150 Wind Turbine Generators (WTGs) and the farms we focus on are located in roughly 50+ kilometers off the coast. The specific duration of each phase of the life-cycle depends on the specific windfarm, but to give the reader some idea of the timescales involved: A typical life-cycle would consist of roughly 2-3 yeas of installation, 20-30 years in which the WTGs generate energy and need to be maintained, and then another 2-3 years in which the turbines are decommissioned. These turbines are large structures that will need to be transported and installed by specialized and expensive vessels, leading to large costs over these years. 
@@ -216,7 +216,7 @@ This sort of decomposition is potentially useful for my models, to handle the st
 
 \subsection{Other new knowledge} \label{ss:othnew}
 %ONGOING: Updated this after reading (2 paragraphs)
-While there is not much research relating specifically to decommission projects, some recent work has still been done in this field. In \cite{irawan2019optimisation} an attempt to optimise the decommissioning is made using an ILP. The model created focuses on minimising total costs, and takes many factors into account, such as both offshore and onshore logistics, components that can be sold and components that can be recycled. This broadness means the model is more accurate, but it also means they were not able to solve the exact problem. For this reason they tried various relaxations, and proposed a matheuristic method in which some integer constraints are relaxed. They use this method to create feasible and well-performing solutions in a short time.
+While there is not much research relating specifically to decommission projects, some recent work has still been done in this field. In \cite{irawan2019optimisation} an attempt to optimise the decommissioning is made using an Integer Linear Program. The model created focuses on minimising total costs, and takes many factors into account, such as both offshore and onshore logistics, components that can be sold and components that can be recycled. This broadness means the model is more accurate, but it also means they were not able to solve the exact problem. For this reason they tried various relaxations, and proposed a matheuristic method in which some integer constraints are relaxed. They use this method to create feasible and well-performing solutions in a short time.
 
 \bigskip
 
@@ -534,7 +534,7 @@ The model could potentially be expanded by adding a more sophisticated cost func
 In addition to the developing the models discussed in the previous section, I also implemented the models and solved them for small test cases. This part of the process was highly valuable in my development as a modeler, and many of the design decisions that lead to the creation of the previously shown models were informed by insights and results gained from the implementation. In this section I will describe the chronological progress made through implementation and highlight the obstacles and what I learned in dealing with them. In addition to this section, my full current code is available as an appendix.  %TODO: Add appendix. How am I going to do this when the code went through so many iterations? If impossible remove this last line, or instead only add the current code and say it's just the multilevel bit. 
 
 \subsection{Getting an initial implementation}
-Before this project I had only used simple graphical interfaces for solvers to solve simple exercises from introductory courses to optimization. This means I had very little experience really working with solvers, and no experience doing so through programming. I decided for this project to work in C++ as I am familiar with the language (more than Java or Python for example) and most solvers I looked at can be called through a C++ library. By the time I started this phase of the project I was forced to work from home because of the Covid-19 pandemic, which means I could not use the university computers and had to install any solver I wished to use on my own personal computer. This caused some startup problems getting a good solver to work properly. I started off using free solvers, Google's OR-tools at first \cite{ortools}. I had issues getting this to work on my PC and I kept having issues with the library, so I switched to another free solver, COIN-OR \cite{coinor}. This also had some issues, and after I asked my supervisors for advice they helped me get a license for the FICO Xpress optimization suite \cite{ficoxp}. This was the first commercially available LP and MIP solver, and is still a widely used solver. This solver was much easier to get to work than the ones I previously used, and I could finally get to actually solving models. 
+Before this project I had only used simple graphical interfaces for solvers to solve simple exercises from introductory courses to optimization. This means I had very little experience really working with solvers, and no experience doing so through programming. I decided for this project to work in C++ as I am familiar with the language (more than Java or Python for example) and most solvers I looked at can be called through a C++ library. By the time I started this phase of the project I was forced to work from home because of the Covid-19 pandemic, which means I could not use the university computers and had to install any solver I wished to use on my own personal computer. This caused some startup problems getting a good solver to work properly. I started off using free solvers, Google's OR-tools at first \cite{ortools}. I had issues getting this to work on my PC and I kept having issues with the library, so I switched to another free solver, COIN-OR \cite{coinor}. This also had some issues, and after I asked my supervisors for advice they helped me get a license for the FICO Xpress optimization suite \cite{ficoxp}. This was the first commercially available LP and MIP solver, and its current version is still ranked among the top solvers, together with Cplex and Gurobi. This solver was much easier to get to work than the ones I previously used, and I could finally get to actually solving models. 
 
 I started with the Xpress tutorial and from there slowly changed the tutorial model to the installation phase model I had at the time, a precursor to the model shown in \Cref{sss:install}. I had made a very simplistic test case for this, with only 3 turbines, 2 tasks per turbine, and 2 vessels to complete them, with artificial durations for each task to simply test whether the model gave the results I expected. Whenever this was not the case, it gave me insights in the model; for example at first I did not have a limit on the amount of vessels that could be rented in a period, and regardless of how many turbines there were every turbine would be installed in the first period, as the amount of vessels available was unlimited and there was a benefit to installing all turbines as fast as possible. This lead to unrealistic amounts of vessels rented in the first period, and none after; hence I introduced the limit seen in equation (7). 
 
@@ -580,11 +580,36 @@ This was my first real teaching experience, and I think it went very well. I enj
 
 \pagebreak
 
-\section{Next steps}\label{s:next}
-Lorem Ipsum 
+\section{Conclusion}\label{s:concl}
+As is hopefully evident from the previous sections, a lot of progress has been made since the first year review. Where before I mostly had researched the installation scheduling part of the literature, I now have a broader understanding of the literature of each of the phases. In the same way, I previously had some ideas about a potential modeling approach but no concrete models yet, I now have a set of models of varying complexity, all implemented. 
+
+I'm happy with this progress, especially since there were also some delays following the Covid-19 pandemic. A lot of the hassle with trying out free MIP solver libraries could have been avoided if I had been working from university, and when the lockdown first started in March it took me a couple of weeks to adjust and develop a good working routine from home. That said, once I settled into a routine I managed to work rather productively, which is why I made quite a lot of progress over these past months. 
+
+\subsection{Next steps}
+As the basis of my knowledge (of the literature, modeling, and implementation) is now fairly solid, and I have a basis of experience with the main methods used, the next steps will focus on producing new knowledge and attempting to answer the research questions posed in \Cref{ss:quest}. In the following months I will specifically focus on the first subquestion:
+
+\sqa* 
+
+This overlap of resources is the phenomenon already included in the combined model from \Cref{sss:comb}, and my aim is to create a model that focuses in on the overlap between two phases. At the moment I have a few possible approaches in mind to design such a model, and I will have to do research and experiments to determine which approach works best in practice. One of the key design decisions on which approaches can differ is whether the overlapping phases are scheduled by a single model, or by separate models (a decomposed approach). For example, if looking at the overlap between the installation and maintenance phases, we could choose to create a novel model to schedule this entire overlapped period, or we could use a dedicated installation scheduling model (from the literature) and create a novel model which takes this installation schedule as an input, and which schedules the maintenance tasks without affecting the installation tasks. This latter model would still be a novel approach to maintenance, as it has to deal with turbines coming online gradually. This new maintenance model could serve until installation is complete, after which an already existing maintenance model can be used to determine a maintenance strategy for the rest of the lifespan (or until decommission starts, after which a blended approach can be used again). 
+
+Which of these approaches works best depends cannot be said yet, and will depend on the circumstances. Decomposed approaches generally reduce computational time, but allowing installation decisions to be affected might allow for more optimizations. Therefore the way I plan to research this is by first attempting a model that plans both installation and maintenance tasks, but if this turns out to be too computationally intensive the installation tasks can be fixed (at values determined by a separate model from the literature). The choice would be to fix the installation tasks rather than the maintenance ones as installation will be significantly more costly than the maintenance over this period; installation will use expensive specialized vessels for every turbine, while maintenance of that scale will not be necessary on most turbines in the first few years. After a model such as this is made for the overlap between installation and maintenance, a very similar model can likely be made for the overlap between decommission and maintenance. 
+
+If this research direction proves fruitful, our goal is to put these findings the novel model(s) in a paper to be published. 
 
 \subsection{Timeline}
-Lorem Ipsum 
+The current goal is to get that first research question sufficiently answered in the next few months, ideally before March. After that there are the other two questions left:
+
+\sqb*
+
+\sqc*
+
+Since these observe the same phenomenon, they can likely be researched through similar models. From March on, my focus will be on these two joint questions. Exactly which approach to take will have to be decided on later, but the topic appears to lend itself for a simulation approach. A key thing to focus on is how the failure rate of turbines changes over the course of their lifespan. Some research has already been found on this changing failure rate \cite{carroll2015offshore,papatzimos2019data}, which will be useful in my future research on this. My hope is that this aspect of the research can produce another paper. 
+
+Once this part of the research is also complete, which I hope to be around summer 2021, I will have satisfying answers to each of my sub-questions, at which point I can write my thesis and answer the main research question
+
+\rquest
+
+If all goes according to this plan, my this project and my thesis should be finished by fall 2021, roughly 12 months from this review. 
 
 \pagebreak
 
