--- a/2nd year report/mybib.bib
+++ b/2nd year report/mybib.bib
@@ -502,3 +502,19 @@
       year   = "1983",
      note = "Accessed October 15, 2020"
     }
+
+@article{carroll2015offshore,
+  title={Offshore wind turbine sub-assembly failure rates through time},
+  author={Carroll, James and McDonald, Alasdair and Barrera Martin, Oswaldo and McMillan, David and Bakhshi, Roozbeh},
+  year={2015},
+  publisher={European Wind Energy Association}
+}
+
+@inproceedings{papatzimos2019data,
+  title={Data-Informed Lifetime Reliability Prediction for Offshore Wind Farms},
+  author={Papatzimos, Alexios Koltsidopoulos and Thies, Philipp R and Lonchampt, Jerome and Joly, Antoine and Dawood, Tariq},
+  booktitle={2019 IEEE International Conference on Prognostics and Health Management (ICPHM)},
+  pages={1--8},
+  year={2019},
+  organization={IEEE}
+}
