--- a/2nd year report/Year2report.tex
+++ b/2nd year report/Year2report.tex
@@ -421,7 +421,7 @@ Equations (32) and (33) are the same as equation (22), this time split for the p
 
 \bigskip
 
-The strength of this model is that it can be used to plan decisions that need to be made in advance (which vessels to charter and when to schedule certain routine tasks) while considering a set of uncertain scenarios. However it does still assume complete \textit{a priori} knowledge of each of these uncertain factors, as well as the weather. Since the focus lies on the decisions universal to all scenarios, rather than any specific scenario, this might not pose an issue for some uses. The model could potentially be improved by letting the weather conditions (encompassed in $\omega_{i,t}$) also depend on the scenario. The reason I have not done that (yet) is that while developing these models, I have been implementing at the same time, as discussed in detail in \Cref{s:impl}. The implementation of the above model already had issues being solved on my computer with a very small test case, and I wanted to improve that before making it even more complex. 
+The strength of this model is that it can be used to plan decisions that need to be made in advance (which vessels to charter and when to schedule certain routine tasks) while considering a set of uncertain scenarios. However it does still assume complete \textit{a priori} knowledge of each of these uncertain factors, as well as the weather. Since the focus lies on the decisions universal to all scenarios, rather than any specific scenario, this might not pose an issue for some uses. The model could potentially be improved by letting the weather conditions (encompassed in $\omega_{i,t}$) also depend on the scenario. The reason I have not done that (yet) is that while developing these models, I have also been implementing at the same time. This is discussed in detail in \Cref{s:impl}. The implementation of the above model already had issues being solved on my computer with a very small test case, and I wanted to improve that before adding more complexity.
 
 \subsection{Multilevel model} \label{ss:multi}
 The above model grew in complexity with every iteration, and since I had reached a point where the implementation could not even solve a very simple testcase in a number of hours (on my personal computer) I attempted a different approach. In the literature multilevel models are common, and splitting the problem into multiple subproblems can reduce the time it takes to solve. My idea behind this model was one level in which large scale decisions are made, such as for which tasks to complete and which vessels to charter for every month. Then a lower level can assign these tasks to specific vessels in some order. 
